examples/test/testpolicy93.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy93
  namespace: namespace412
spec:
  podSelector:
    matchLabels:
      key18: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value23
      podSelector:
        matchLabels:
          key48: value10
          key30: value32
          key4: value23
